[gd_scene load_steps=2 format=3 uid="uid://cttt8f5ooypn0"]

[ext_resource type="Script" uid="uid://crdluuyvnjmfp" path="res://scripts/ui/MenuController.gd" id="1_426s2"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_426s2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1150.0
offset_bottom = 652.0
color = Color(0, 0.56078434, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -129.5
offset_right = 150.0
offset_bottom = 129.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Congratulations! You have won!"
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Time:"
horizontal_alignment = 1

[node name="FirefliesLabel" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Fireflies:"
horizontal_alignment = 1

[node name="NextLevelButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Next Level"

[node name="RestartButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Restart Level"

[node name="MainMenuButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
